--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <!-- Adjusted aspect ratio to 4/5 or square to fit the portrait nicely -->
                     <div class="aspect-[4/5] bg-gray-200 overflow-hidden mb-3 relative">
                         <!-- IMPORTANT: Ensure your photo is named 'kritika.jpg' and is in the same folder -->
-                        <img src="https://static.vecteezy.com/system/resources/previews/039/380/931/non_2x/cute-cartoon-couple-in-love-valentine-s-day-illustration-vector.jpg" alt="A special memory" class="w-full h-72 object-cover">
+                        <img src="abc.jpeg" alt="A young woman in a green sweater" class="w-full h-72 object-cover">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent"></div>
                     </div>
                     <div class="font-serif text-gray-800 text-lg italic rotate-[-1deg]">"My Favorite Person"</div>
@@ -496,4 +496,5 @@
 </body>
 
 </html>
+
 
